--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body class="light">
-    <header class="light">
+    <header>
         <a href="#inicio">
             <img class="logo" src="img/logo.png" alt="mi logo">
         </a>
@@ -74,7 +74,7 @@
     </main>
 
     <footer class="dark">
-        <p> Codido Pa Lante <br>
+        <p> Codigo Pa Lante <br>
             Realizado por:<br>
             RUYDEILER SUAREZ <i class="fa-solid fa-copyright"></i>
         </p>
