--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
             <ul>
                  <li> <a href="https://instagram.com/soy.ruy?igshid=MjEwN2IyYWYwYw==" target="_blank"> <img src="img/instagram.png" alt="mail"> </a> </li>
-                 <li> <a href="https://wa.me/005491162061070" target="_blank"> <img src="img/whatsapp (1).png" alt="whatsapp"> </a> </li>
+                 <li> <a href="https://wa.me/005491162061070" target="_blank"> <img src="img/whatsapp (1).gif" alt="whatsapp"> </a> </li>
                  <li> <a href="https://www.linkedin.com/in/ruydeilersuarez/" target="_blank"> <img src="img/linkedin.png" alt="linkedin"> </a> </li>
             </ul>
             
