--- a/index.html
+++ b/index.html
@@ -55,9 +55,13 @@
                 </button>
                 <br>
 
-                <input type="checkbox" class="theme-checkbox" id="theme-toggle">
            
+                <label class="switch">
+                    <input type="checkbox" id="theme-toggle" class="theme-checkbox">
+                    <span class="slider"></span>
+                </label>
 
+                
             </article>
         </section>
 
@@ -76,7 +80,7 @@
         </section>
 
         <section class= "iconos">
-
+            <h3>Visitame en mis Redes</h3>
             <ul>
                  <li> <a href="https://instagram.com/soy.ruy?igshid=MjEwN2IyYWYwYw==" target="_blank"> <img src="img/instagram.png" alt="mail"> </a> </li>
                  <li> <a href="https://wa.me/005491162061070" target="_blank"> <img src="img/whatsapp.png" alt="whatsapp"> </a> </li>
