--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </section>
 
 
-        <section id="contacto">
+        <section id="hablemos">
             <article class="hablemos">
 
                 <h2> Hablemos</h2>
@@ -79,8 +79,7 @@
             </article>
         </section>
 
-        <section class= "iconos">
-            <h3>Visitame en mis Redes</h3>
+        <section class= "iconos" id="contacto">
             <ul>
                  <li> <a href="https://instagram.com/soy.ruy?igshid=MjEwN2IyYWYwYw==" target="_blank"> <img src="img/instagram.png" alt="mail"> </a> </li>
                  <li> <a href="https://wa.me/005491162061070" target="_blank"> <img src="img/whatsapp.png" alt="whatsapp"> </a> </li>
