--- a/index.html
+++ b/index.html
@@ -49,10 +49,16 @@
             <article class="inicio">
                     <h1 class="light">Ruydeiler Suarez <i class="fa-solid fa-book-open-reader"></i></h1>
                     <p class="light">
-                        <strong> "Soy un profesional dedicado y orientado al cliente con habilidades destacadas en atención al cliente, diseño y generación de ideas. 
-                        Tu actitud positiva y entusiasta te impulsa a brindar un excelente servicio en todas las interacciones con los clientes. Destacas por 
-                        tu capacidad para comprender las necesidades y deseos de los clientes, ofreciendo soluciones
-                        efectivas de manera amable y respetuosa. Además, tienes una habilidad natural para establecer conexiones significativas y generar un impacto positivo." </strong>
+                        <strong> "Poseo  una  visión  proactiva,  organizada  y 
+                            comprometida, con facilidad de 
+                            adaptación y orientación al logro de 
+                            objetivos. Como administrativo, cuento 
+                            con conocimientos que me permiten 
+                            desempeñar mi trabajo de manera efectiva. 
+                            Además, disfruto del desarrollo de páginas 
+                            web  y  la  generación  de  contenido  e  ideas 
+                            innovadoras,  me  encanta  crear  propuesta 
+                            para mejoras de trabajo. " </strong>
                     </p>
 
                 
